Drop workaround for cursor bug.

QTBUG-6185 has been fixed and the fix should hopefully appear in 4.7.1,
plus distros (e.g. Fedora) have begun backporting it to their 4.7.0
packages.